--- a/templates/Core/reg_home.html
+++ b/templates/Core/reg_home.html
@@ -29,12 +29,35 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                            <div class="modal-body">
-    <p>EC: {{plant.ec}}</p>
-    <p>pH: {{plant.ph}}</p>
-    <p>NPK: {{plant.npk}}</p>
-    <p>Temperature: {{plant.temperature}}</p>
-    <p>Ideal Moisture: {{plant.ideal_moisture}}</p>
-    <p>Fertilizer: {{plant.fertilizer}}</p>
+                               <form action="{% url 'update_plant' %}"  method="post">
+<div class="form-group">
+        <label for="ec{{plant.id}}">EC:</label>
+        <input type="text" class="form-control" id="ec{{plant.id}}" value="{{plant.ec}}">
+    </div>
+<div class="form-group">
+        <label for="ph{{plant.id}}">PH:</label>
+        <input type="text" class="form-control" id="ph{{plant.id}}" value="{{plant.ph}}">
+    </div>
+<div class="form-group">
+        <label for="npk{{plant.id}}">NPK:</label>
+        <input type="text" class="form-control" id="npk{{plant.id}}" value="{{plant.npk}}">
+    </div>
+<div class="form-group">
+        <label for="temperature{{plant.id}}">Temperature:</label>
+        <input type="text" class="form-control" id="temperature{{plant.id}}" value="{{plant.temperature}}">
+    </div>
+<div class="form-group">
+        <label for="ideal_moisture{{plant.id}}">Moisture:</label>
+        <input type="text" class="form-control" id="ideal_moisture{{plant.id}}" value="{{plant.ideal_moisture}}">
+    </div>
+<div class="form-group">
+        <label for="fertilizer{{plant.id}}">Fertilizer:</label>
+        <input type="text" class="form-control" id="fertilizer{{plant.id}}" value="{{plant.fertilizer}}">
+    </div>
+                               <div class="modal-footer">
+    <button type="button" class="btn btn-primary" id="saveButton{{plant.id}}">Save</button>
+</div>
+                                   </form>
     <div class="row">
         <div class="col-lg-3">
             <div class="chart-container">
@@ -142,5 +165,42 @@ function getDay(timestamp) {
             drawChart('detailChartPH{{plant.id}}', '{{plant.name}}', 'pH', detail_data['{{ plant.name }}'].date_time,detail_data['{{ plant.name }}'].m_ph);
         });
     {% endfor %}
+    {% for plant in plants %}
+    document.getElementById("saveButton{{plant.id}}").addEventListener('click', function() {
+        var ec = document.getElementById("ec{{plant.id}}").value;
+        var ph = document.getElementById("ph{{plant.id}}").value;
+        var npk = document.getElementById("npk{{plant.id}}").value;
+        var temperature = document.getElementById("temperature{{plant.id}}").value;
+        var ideal_moisture = document.getElementById("ideal_moisture{{plant.id}}").value;
+        var fertilizer = document.getElementById("fertilizer{{plant.id}}").value;
+
+        var updateData = {
+            'ec': ec,
+            'ph': ph,
+            'npk': npk,
+            'temperature': temperature,
+            'ideal_moisture': ideal_moisture,
+            'fertilizer': fertilizer,
+            'id': {{plant.id}}
+        };
+
+        fetch('/update_plant/', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': '{{ csrf_token }}'
+            },
+            body: JSON.stringify(updateData)
+        }).then(response => response.json())
+        .then(data => {
+            console.log('Success:', data);
+            // You can update the page or notify the user of success here
+        })
+        .catch((error) => {
+            console.error('Error:', error);
+        });
+    });
+{% endfor %}
+
 </script>
 {% endblock %}
