--- a/templates/Core/reg_home.html
+++ b/templates/Core/reg_home.html
@@ -12,111 +12,119 @@
                 <div class="card-header">
                     <h2 class="card-title">{{plant.name}}</h2>
                 </div>
-                <div class="card-body d-flex justify-content-between">
-                    <div class="row">
-                        <div class="col-4">
-
-                            <img src="{{ plant.photo.url }}">
+                <div class="card-body d-flex flex-column">
+                    <!-- Image and Chart Row -->
+                    <div class="row flex-grow-1">
+                        <!-- Plant Image Column -->
+                        <div class="col-md-4 col-sm-12 mb-3">
+                            <!-- Stack on small screens, side-by-side on medium and up -->
+                            <img src="{{ plant.photo.url }}" alt="{{ plant.name }}" class="img-fluid">
+                            <!-- Ensure image is responsive -->
                         </div>
-                        <div class="col-8 flex-grow-1 d-flex">
-
-                            <div class="chart-container">
+                        <!-- Chart Column -->
+                        <div class="col-md-8 col-sm-12 d-flex flex-column">
+                            <!-- Stack on small screens, side-by-side on medium and up -->
+                            <div class="chart-container flex-grow-1">
                                 <canvas id="myChart{{plant.id}}"></canvas>
                             </div>
-                            <button type="button" class="btn btn-primary align-self-end mt-auto" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal{{plant.id}}">More Info
-                            </button>
                         </div>
-                        </div>
+                    </div>
+                    <!-- More Info Button Positioned to the Bottom Right -->
+                    <div class="d-flex justify-content-end mt-3">
+                        <!-- Use d-flex and justify-content-end to push button to the right -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal{{plant.id}}">More Info
+                        </button>
                     </div>
                 </div>
             </div>
-            <!-- Modal Dialog for Each Plant -->
-            <div class="modal fade" id="exampleModal{{plant.id}}" tabindex="-1" aria-labelledby="exampleModalLabel"
-                 aria-hidden="true">
-                <div class="modal-dialog modal-xl">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">{{plant.name}}</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="plant-info">
-                                <div class="plant-img">
-                                    <img src="{{ plant.photo.url }}">
-                                </div>
-                                <form action="{% url 'update_plant' plant.id %}" method="post">
-                                    {% csrf_token %}
-                                    <div class="form-group">
-                                        <label for="ec{{plant.id}}">EC:</label>
-                                        <input type="text" class="form-control" name="ec" id="ec{{plant.id}}"
-                                               value="{{plant.ec}}">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="ph{{plant.id}}">PH:</label>
-                                        <input type="text" class="form-control" name="ph" id="ph{{plant.id}}"
-                                               value="{{plant.ph}}">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="npk{{plant.id}}">NPK:</label>
-                                        <input type="text" class="form-control" name="npk" id="npk{{plant.id}}"
-                                               value="{{plant.npk}}">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="temperature{{plant.id}}">Temperature:</label>
-                                        <input type="text" class="form-control" name="temperature"
-                                               id="temperature{{plant.id}}" value="{{plant.temperature}}">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="ideal_moisture{{plant.id}}">Moisture:</label>
-                                        <input type="text" class="form-control" name="ideal_moisture"
-                                               id="ideal_moisture{{plant.id}}" value="{{plant.ideal_moisture}}">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="fertilizer{{plant.id}}">Fertilizer:</label>
-                                        <input type="text" class="form-control" name="fertilizer"
-                                               id="fertilizer{{plant.id}}" value="{{plant.fertilizer}}">
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="submit" class="btn btn-primary" id="saveButton{{plant.id}}">Save
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    <div class="chart-container">
-                                        <canvas id="detailChartTemp{{plant.id}}"></canvas>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="chart-container">
-                                        <canvas id="detailChartEC{{plant.id}}"></canvas>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="chart-container">
-                                        <canvas id="detailChartNPK{{plant.id}}"></canvas>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="chart-container">
-                                        <canvas id="detailChartPH{{plant.id}}"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-            {% endif %}
         </div>
+        <!-- Modal Dialog for Each Plant -->
+        <div class="modal fade" id="exampleModal{{plant.id}}" tabindex="-1" aria-labelledby="exampleModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">{{plant.name}}</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="plant-info">
+                            <div class="plant-img">
+                                <img src="{{ plant.photo.url }}">
+                            </div>
+                            <form action="{% url 'update_plant' plant.id %}" method="post">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label for="ec{{plant.id}}">EC:</label>
+                                    <input type="text" class="form-control" name="ec" id="ec{{plant.id}}"
+                                           value="{{plant.ec}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="ph{{plant.id}}">PH:</label>
+                                    <input type="text" class="form-control" name="ph" id="ph{{plant.id}}"
+                                           value="{{plant.ph}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="npk{{plant.id}}">NPK:</label>
+                                    <input type="text" class="form-control" name="npk" id="npk{{plant.id}}"
+                                           value="{{plant.npk}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="temperature{{plant.id}}">Temperature:</label>
+                                    <input type="text" class="form-control" name="temperature"
+                                           id="temperature{{plant.id}}" value="{{plant.temperature}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="ideal_moisture{{plant.id}}">Moisture:</label>
+                                    <input type="text" class="form-control" name="ideal_moisture"
+                                           id="ideal_moisture{{plant.id}}" value="{{plant.ideal_moisture}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="fertilizer{{plant.id}}">Fertilizer:</label>
+                                    <input type="text" class="form-control" name="fertilizer"
+                                           id="fertilizer{{plant.id}}" value="{{plant.fertilizer}}">
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-primary" id="saveButton{{plant.id}}">Save
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <div class="chart-container">
+                                    <canvas id="detailChartTemp{{plant.id}}"></canvas>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="chart-container">
+                                    <canvas id="detailChartEC{{plant.id}}"></canvas>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="chart-container">
+                                    <canvas id="detailChartNPK{{plant.id}}"></canvas>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="chart-container">
+                                    <canvas id="detailChartPH{{plant.id}}"></canvas>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        {% endif %}
     </div>
-    <script>
+</div>
+<script>
       var data = JSON.parse('{{ data | safe }}');
       var detail_data = JSON.parse('{{ detail_data | safe }}');
 
@@ -191,5 +199,6 @@
 
 
 
-    </script>
-    {% endblock %}
+
+</script>
+{% endblock %}
