--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -18,6 +18,9 @@
                         <a class="nav-link" href="{% url 'reg_index'%}">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' request.user.id %}">Profile</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="javascript:{document.querySelector('#logout').submit()}">Logout</a>
                         <form id="logout" action="{% url 'logout' %}" method="post">
                             {% csrf_token %}
