--- a/templates/Core/reg_home.html
+++ b/templates/Core/reg_home.html
@@ -125,7 +125,75 @@
         </div>
         {% endfor %}
         {% endif %}
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                data-bs-target="#AddPlantModal{{plant.id}}">Add Plant
+        </button>
+                <div class="modal fade" id="AddPlantModal{{plant.id}}" tabindex="-1" aria-labelledby="AddPlantModalLabel" aria-hidden="true">
+<!-- tabindex = -1 prevents this div from being displayed -->
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="AddPlantModalLabel">Add Plant</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="plant-info">
+                            <form action = '{% url "add_plant" %}'  method="post" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label for="name">Name:</label>
+                                    <input type="text" class="form-control" name="plant_name" id="name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="photo">Picture:</label>
+                                    <input type="file" class="form-control" name="plant_pic" id="photo">
+                                </div>
+                                <div class="form-group">
+                                    <label for="ec">EC:</label>
+                                    <input type="text" class="form-control" name="ec" id="ec"
+                                           value="{{plant.ec}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="ph{{plant.id}}">PH:</label>
+                                    <input type="text" class="form-control" name="ph" id="ph"
+                                           value="{{plant.ph}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="npk{{plant.id}}">NPK:</label>
+                                    <input type="text" class="form-control" name="npk" id="npk"
+                                           value="{{plant.npk}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="temperature{{plant.id}}">Temperature:</label>
+                                    <input type="text" class="form-control" name="temperature"
+                                           id="temperature" value="{{plant.temperature}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="ideal_moisture{{plant.id}}">Moisture:</label>
+                                    <input type="text" class="form-control" name="ideal_moisture"
+                                           id="ideal_moisture" value="{{plant.ideal_moisture}}">
+                                </div>
+                                <div class="form-group">
+                                    <label for="fertilizer{{plant.id}}">Fertilizer:</label>
+                                    <input type="text" class="form-control" name="fertilizer"
+                                           id="fertilizer" value="{{plant.fertilizer}}">
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-primary" id="saveButton">Save
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+
 </div>
 <script>
       var data = JSON.parse('{{ data | safe }}');
